kubernetes/pxeboot/netbootxyz/netbootxyz-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbootxyz-traefik
  namespace: pxeboot
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbootxyz.kubernetes.timo.be`) || Host(`netbootxyz.timo.be`)
      kind: Rule
      services:
        - name: netbootxyz-traefik
          port: 3000
      middlewares:
        - name: auth
          namespace: traefik
